--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ agenda/agenda.ont/.classpath
 agenda/agenda.ont/.project
 agenda/agenda.ont/.settings
 agenda/agenda.ont/target
+agenda/agenda.pom/.project
+agenda/agenda.pom/.settings
 agenda/agenda.remote/.classpath
 agenda/agenda.remote/.project
 agenda/agenda.remote/.settings
@@ -39,8 +41,6 @@ agenda/agenda.server/.classpath
 agenda/agenda.server/.project
 agenda/agenda.server/.settings
 agenda/agenda.server/target
-agenda/pom/.project
-agenda/pom/.settings
 food_shopping/food_shopping.service.client/.classpath
 food_shopping/food_shopping.service.client/.project
 food_shopping/food_shopping.service.client/.settings
