--- a/agenda/agenda.eventSelection.ont/pom.xml
+++ b/agenda/agenda.eventSelection.ont/pom.xml
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>agenda.ont</artifactId>
-				<version>1.0.1-SNAPSHOT</version>
+			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
@@ -73,6 +73,19 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!--	below 2 dependencies added instead of	${java.home}\lib\rt.jar-->
+		<!--		dependency for javax.xml.datatype-->
+		<dependency>
+			<groupId>activesoap</groupId>
+			<artifactId>jaxp-api</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<!--		dependency for javax.xml.datatype-->
+		<dependency>
+			<groupId>com.googlecode.jinahya</groupId>
+			<artifactId>ocap-api</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -89,15 +102,15 @@
 					</instructions>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<compilerArguments>
-						<bootclasspath>${java.home}\lib\rt.jar</bootclasspath>
-					</compilerArguments>
-				</configuration>
-			</plugin>
+			<!--			<plugin>-->
+			<!--				<groupId>org.apache.maven.plugins</groupId>-->
+			<!--				<artifactId>maven-compiler-plugin</artifactId>-->
+			<!--				<configuration>-->
+			<!--					<compilerArguments>-->
+			<!--						<bootclasspath>${java.home}\lib\rt.jar</bootclasspath>-->
+			<!--					</compilerArguments>-->
+			<!--				</configuration>-->
+			<!--			</plugin>-->
 		</plugins>
 	</build>
 </project>
