--- a/safety_home/safety_home.service.smartCardProvider/pom.xml
+++ b/safety_home/safety_home.service.smartCardProvider/pom.xml
@@ -50,9 +50,9 @@
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>		
 		<dependency>
-			<groupId>org.universAAL.safety.database</groupId>
-			<artifactId>mysql.connector.java</artifactId>
-			<version>5.1.18</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.17</version>
 		</dependency>
 	</dependencies>
     <build>
