--- a/agenda/agenda.server/pom.xml
+++ b/agenda/agenda.server/pom.xml
@@ -75,64 +75,76 @@
 			<artifactId>pax-logging-service</artifactId>
 			<version>1.6.2</version>
 		</dependency>
+
+		<!--		dependency for javax.xml.datatype-->
+		<dependency>
+			<groupId>activesoap</groupId>
+			<artifactId>jaxp-api</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.17</version>
+		</dependency>
 	</dependencies>
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<compilerArguments>
-						<bootclasspath>${java.home}\lib\rt.jar</bootclasspath>
-					</compilerArguments>
-				</configuration>
-			</plugin>
+	<plugins>
+		<!--			<plugin>-->
+		<!--				<groupId>org.apache.maven.plugins</groupId>-->
+		<!--				<artifactId>maven-compiler-plugin</artifactId>-->
+		<!--				<configuration>-->
+		<!--					<compilerArguments>-->
+		<!--						<bootclasspath>${java.home}\lib\rt.jar</bootclasspath>-->
+		<!--					</compilerArguments>-->
+		<!--				</configuration>-->
+		<!--			</plugin>-->
 
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<inherited>false</inherited>
-				<configuration>
-					<instructions>
-						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Description>${project.description}</Bundle-Description>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Bundle-Activator>org.universAAL.agenda.server.Activator</Bundle-Activator>
-						<Export-Package>org.universAAL.agenda.server</Export-Package>
-						<Private-Package>org.universAAL.agenda.server.unit_impl,
-							org.universAAL.agenda.server.database,org.universAAL.agenda.server.gui.wrapper</Private-Package>
-						<Import-Package>
-							org.universAAL.middleware.container,
-							org.universAAL.middleware.container.osgi,
-							org.universAAL.middleware.container.osgi.util,
-							org.universAAL.middleware.context,
-							org.universAAL.middleware.context.owl,
-							org.universAAL.middleware.input,
-							org.universAAL.middleware.io.owl,
-							org.universAAL.middleware.io.rdf,
-							org.universAAL.middleware.output,
-							org.universAAL.middleware.owl,
-							org.universAAL.middleware.owl.supply,
-							org.universAAL.middleware.rdf,
-							org.universAAL.middleware.service,
-							org.universAAL.middleware.service.owls.process,
-							org.universAAL.middleware.service.owls.profile,
-							org.universAAL.middleware.util,
+		<plugin>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>maven-bundle-plugin</artifactId>
+			<extensions>true</extensions>
+			<inherited>false</inherited>
+			<configuration>
+				<instructions>
+					<Bundle-Name>${project.name}</Bundle-Name>
+					<Bundle-Description>${project.description}</Bundle-Description>
+					<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+					<Bundle-Activator>org.universAAL.agenda.server.Activator</Bundle-Activator>
+					<Export-Package>org.universAAL.agenda.server</Export-Package>
+					<Private-Package>org.universAAL.agenda.server.unit_impl,
+						org.universAAL.agenda.server.database,org.universAAL.agenda.server.gui.wrapper</Private-Package>
+					<Import-Package>
+						org.universAAL.middleware.container,
+						org.universAAL.middleware.container.osgi,
+						org.universAAL.middleware.container.osgi.util,
+						org.universAAL.middleware.context,
+						org.universAAL.middleware.context.owl,
+						org.universAAL.middleware.input,
+						org.universAAL.middleware.io.owl,
+						org.universAAL.middleware.io.rdf,
+						org.universAAL.middleware.output,
+						org.universAAL.middleware.owl,
+						org.universAAL.middleware.owl.supply,
+						org.universAAL.middleware.rdf,
+						org.universAAL.middleware.service,
+						org.universAAL.middleware.service.owls.process,
+						org.universAAL.middleware.service.owls.profile,
+						org.universAAL.middleware.util,
 
-							org.universAAL.ontology.profile,
+						org.universAAL.ontology.profile,
 
-							org.universAAL.ontology.agenda, 
-							org.universAAL.ontology.agenda.service,
+						org.universAAL.ontology.agenda,
+						org.universAAL.ontology.agenda.service,
 
-							java.sql.*, javax.swing,
-							org.osgi.service.*, org.osgi.framework,
-							javax.xml.*,
-							com.mysql.jdbc, org.slf4j</Import-Package>
-					</instructions>
-				</configuration>
-			</plugin>
-		</plugins>
+						java.sql.*, javax.swing,
+						org.osgi.service.*, org.osgi.framework,
+						javax.xml.*,
+						com.mysql.jdbc, org.slf4j</Import-Package>
+				</instructions>
+			</configuration>
+		</plugin>
+	</plugins>
 	</build>
 
 </project>
