--- a/health/health.treat.manager/pom.xml
+++ b/health/health.treat.manager/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>health.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<version>0.2.0-SNAPSHOT</version>
-		<relativePath>../pom</relativePath>
+		<relativePath>../health.pom</relativePath>
 	</parent>
 
 	<artifactId>health.treat.manager</artifactId>
