--- a/nutritional/nutritional.uiclient/pom.xml
+++ b/nutritional/nutritional.uiclient/pom.xml
@@ -1,10 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.universAAL.AALapplication</groupId>
-  <artifactId>nutritional.uiclient</artifactId>
+  <artifactId>nutritional.uiclient.pom</artifactId>
   <version>0.2</version>
   <name>Nutritional UI Client</name>
   <description/>
+  <properties>
+    <service.name.svn>nutritional.uiclient</service.name.svn >
+  </properties>
   <packaging>bundle</packaging>
     <dependencies>
 		<dependency>
@@ -25,8 +27,7 @@
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.container.xfaces</artifactId>
-			<version>1.1.0</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.container.osgi</artifactId>
@@ -57,7 +58,42 @@
 			<artifactId>ont.profile</artifactId>
 			<version>1.1.0</version>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.5</version>
+		</dependency>
+		<dependency>
+			<groupId>axis</groupId>
+			<artifactId>axis-pax</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis</groupId>
+			<artifactId>axis-jaxrpc</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.miglayout</groupId>
+			<artifactId>miglayout</artifactId>
+			<version>3.7.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-discovery</groupId>
+			<artifactId>commons-discovery</artifactId>
+			<version>0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>nutritional.ontology</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+    </dependencies>
     <build>
 		<plugins>
 			<plugin>
@@ -112,4 +148,11 @@
 			</releases>
 		</repository>
 	</repositories>
+	<parent>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<artifactId>new_services.pom</artifactId>
+		<version>B.0</version>
+		<relativePath>../../pom</relativePath>
+	</parent>
+	<groupId>org.universAAL.AALapplication</groupId>
 </project>
