--- a/nutritional/nutritional.ontology/pom.xml
+++ b/nutritional/nutritional.ontology/pom.xml
@@ -1,29 +1,58 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.universAAL.ontology</groupId>
-  <artifactId>nutritional.ontology</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
-  <name>Nutrition</name>
+  <artifactId>ont.nutrition</artifactId>
+  <version>0.1.1-SNAPSHOT</version>
+  <name>Nutrition Ontology</name>
+  <packaging>bundle</packaging>
   <dependencies>
   	<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
-			<version>1.0.1</version>
 	</dependency>
   	<dependency>
   		<groupId>org.universAAL.middleware</groupId>
   		<artifactId>mw.data.representation</artifactId>
-  		<version>1.1.1-SNAPSHOT</version>
   	</dependency>
   	<dependency>
   		<groupId>org.universAAL.middleware</groupId>
   		<artifactId>mw.bus.service</artifactId>
-  		<version>1.1.1-SNAPSHOT</version>
   	</dependency>
   	<dependency>
+      <groupId>org.universAAL.middleware</groupId>
+      <artifactId>mw.container.xfaces</artifactId>
+    </dependency>
+  	<dependency>
   		<groupId>org.universAAL.middleware</groupId>
-  		<artifactId>mw.bus.context</artifactId>
-  		<version>1.1.1-SNAPSHOT</version>
+  		<artifactId>mw.container.osgi</artifactId>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.universAAL.ontology</groupId>
+  		<artifactId>ont.phWorld</artifactId>
   	</dependency>
   </dependencies>
+  <parent>
+  	<groupId>org.universAAL.ontology</groupId>
+  	<artifactId>ont.pom</artifactId>
+  	<version>1.1.0</version>
+  	<relativePath>../pom/</relativePath>
+  </parent>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <Bundle-Name>${project.name}</Bundle-Name>
+            <Bundle-Activator>org.universAAL.ontology.Activator</Bundle-Activator>
+            <Bundle-Description>${project.description}</Bundle-Description>
+            <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+            <Export-Package>org.universAAL.ontology.nutrition</Export-Package>
+            <Private-Package>org.universAAL.ontology</Private-Package>
+          </instructions>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
