--- a/new_services.pom/pom.xml
+++ b/new_services.pom/pom.xml
@@ -17,8 +17,8 @@
 	<description>Contains repository, deployment, and other info for all AALapplications</description>
 
 	<modules>
-		<module>../health/pom</module>
-		<module>../personal_safety/pom</module>
+		<module>../health/health.pom</module>
+		<module>../personal_safety/personal_safety.pom</module>
 		<module>../food_shopping/pom</module>
 		<module>../safety_home/pom</module>
 		<module>../medication/pom</module>
