--- a/health/health.motivation/pom.xml
+++ b/health/health.motivation/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>health.pom</artifactId>
-		<version>B.0.1-SNAPSHOT</version>
+		<version>1.0.1-SNAPSHOT</version>
 		<relativePath>../pom/</relativePath>
 	</parent>
 
@@ -15,7 +15,6 @@
 	<name>Motivation Service</name>
 
   <description/>
-    
     <dependencies>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
@@ -61,7 +60,12 @@
     		<artifactId>commons-collections</artifactId>
   			 <version>3.2.1</version>
 		</dependency>
-        
+        <dependency>
+        	<groupId>org.universaal.ontology</groupId>
+			<artifactId>ont.message</artifactId>
+			<version>1.1.1-SNAPSHOT</version>
+        </dependency>
+		
         <dependency>
         	<groupId>net.sourceforge.javacsv</groupId>
         	<artifactId>javacsv</artifactId>
@@ -69,7 +73,6 @@
         	<type>jar</type>
         	<scope>compile</scope>
         </dependency>
-       
     </dependencies>
     
     <build>
