--- a/health/ont.message/pom.xml
+++ b/health/ont.message/pom.xml
@@ -1,24 +1,24 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion> 
-  	<parent>
-    		<groupId>org.universAAL.ontology</groupId>
-    		<artifactId>ont.pom</artifactId>
-    		<version>1.1.1-SNAPSHOT</version>
-    		<relativePath>../pom/</relativePath>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.universAAL.ontology</groupId>
+		<artifactId>ont.pom</artifactId>
+		<version>1.1.1-SNAPSHOT</version>
+		<relativePath>../pom/</relativePath>
 	</parent>
-  	
-  	<groupId>org.universaal.ontology</groupId>
-  	<artifactId>ont.message</artifactId>
-  	<version>0.2.0-SNAPSHOT</version>
-  	<name>MessageOntology</name>
- 	<description>No further description provided</description>
-  	<packaging>bundle</packaging>
-  	<properties>
-  		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+	<artifactId>ont.message</artifactId>
+	<version>1.1.1-SNAPSHOT</version>
+	<name>MessageOntology</name>
+	<description>No further description provided</description>
+	<packaging>bundle</packaging>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compile.source>1.5</maven.compile.source>
 		<maven.compile.target>1.5</maven.compile.target>
-  	</properties>
-    	<dependencies>			
+	</properties>
+	<dependencies>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
@@ -29,26 +29,18 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.context</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.io</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.service</artifactId>
 		</dependency>
 		<dependency>
-           		<groupId>org.universAAL.ontology</groupId>
-        		<artifactId>ont.phWorld</artifactId>
-	       	</dependency>		
-		<dependency>
-    			<groupId>commons-collections</groupId>
-    			<artifactId>commons-collections</artifactId>
-  		 	<version>3.2.1</version>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.phWorld</artifactId>
 		</dependency>
-        	<dependency>
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.questionnaire</artifactId>
 			<version>1.1.1-SNAPSHOT</version>
@@ -58,42 +50,36 @@
 			<artifactId>ont.health</artifactId>
 			<version>0.2.0-SNAPSHOT</version>
 		</dependency>
-        	<dependency>
-        		<groupId>net.sourceforge.javacsv</groupId>
-        		<artifactId>javacsv</artifactId>
-        		<version>2.0</version>
-        		<type>jar</type>
-        		<scope>compile</scope>
-       		</dependency>
-			<dependency>
+		<dependency>
+			<groupId>net.sourceforge.javacsv</groupId>
+			<artifactId>javacsv</artifactId>
+			<version>2.0</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
 			<version>1.1.1-SNAPSHOT</version>
 		</dependency>
-			<dependency>
-				<groupId>org.universAAL.AALapplication</groupId>
-				<artifactId>health.motivation</artifactId>
-				<version>0.2.0-SNAPSHOT</version>
-				
-			</dependency>
-    	</dependencies>
-  	  <build>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.felix</groupId>
-					<artifactId>maven-bundle-plugin</artifactId>
-					<extensions>true</extensions>
-					<configuration>
-						<instructions>
-							<Bundle-Name>${project.name}</Bundle-Name>
-							<Bundle-Activator>org.universaal.ontology.Activator</Bundle-Activator>
-							<Bundle-Description>${project.description}</Bundle-Description>
-							<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-							<Export-Package>org.universaal.ontology.owl.*</Export-Package>
-							<Private-Package>org.universaal.ontology.*</Private-Package>							
-						</instructions>
-					</configuration>
-				</plugin>
-			</plugins>
-		</build>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Bundle-Name>${project.name}</Bundle-Name>
+						<Bundle-Activator>org.universaal.ontology.Activator</Bundle-Activator>
+						<Bundle-Description>${project.description}</Bundle-Description>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Export-Package>org.universaal.ontology.owl.*</Export-Package>
+						<Private-Package>org.universaal.ontology.*</Private-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
