--- a/personal_safety/personal_safety.pom/pom.xml
+++ b/personal_safety/personal_safety.pom/pom.xml
@@ -4,12 +4,12 @@
 	<parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>B.0</version>
 		<relativePath>../../new_services.pom</relativePath>
 	</parent>
 
 	<artifactId>personal_safety.pom</artifactId>
-	<version>0.2.0-SNAPSHOT</version>
+	<version>B.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Personal Safety AAL Service</name>
@@ -24,25 +24,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>org.universAAL.middleware</groupId>
-				<artifactId>mw.pom</artifactId>
-				<version>1.0.0</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.pom</artifactId>
-				<version>1.0.0</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.risk</artifactId>
-				<version>1.0.0</version>
-			</dependency>
 			<dependency>
 				<groupId>org.universAAL.AALapplication</groupId>
 				<artifactId>personal_safety.service</artifactId>
