--- a/agenda/agenda.runner/runner/configurations/agenda/DBquery.properties
+++ b/agenda/agenda.runner/runner/configurations/agenda/DBquery.properties
@@ -1,41 +1,45 @@
-addUser = INSERT INTO agendaUniversAALDB.Users (`idUserType`, `Name`, `Surname`, `Address`, `idCity`) VALUES (?, ?, ?, ?, ?);
-addUserType = INSERT INTO agendaUniversAALDB.UserType (`Description`, `OntologyURI`) VALUES (?, ?);
+#prepared statements for Agenda.server (class AgendaDB)
+
+#adding data
+addUserWithUserName = INSERT INTO agendaUniversAALDB.Users (`idUserType`,`UserName`) VALUES (?, ?);
+addCalendar = INSERT INTO agendaUniversAALDB.CalendarType (`Description`, `idUser`) VALUES (?,?);
+addEvent = INSERT INTO agendaUniversAALDB.Event (`idCalendar`, `idReminder`, `Title`, `Description`, `StartTime`, `EndTime`, `Location`, `Active`) VALUES (?,?,?,?,?,?,?,?);
+addReminder = INSERT INTO agendaUniversAALDB.Reminder (`idReminderType`, `StartTime`, `RepeatInterval`, `RepeatTime`, `Message`) VALUES (?,?,?,?,?);
+
+#requesting
+getUserID = SELECT u.idUser FROM agendaUniversAALDB.Users u WHERE u.username=?;
+getCalendarsByUser = SELECT * FROM agendaUniversAALDB.CalendarType c, agendaUniversAALDB.Users u WHERE c.idUser=u.idUser AND u.Username=?;
+getAllCalendarsWithUser = SELECT c.idCalendar, c.Description, c.idUser FROM agendaUniversAALDB.CalendarType c;
+getAllCalendarURI = SELECT c.idCalendar FROM agendaUniversAALDB.CalendarType c;
+getCalOwnerName=SELECT c.Description, u.UserName FROM agendaUniversAALDb.CalendarType c, agendaUniversAALDb.Users u WHERE u.idUser=c.idUser AND c.Description=?;
+getCurrentReminders = SELECT e.idEvent FROM agendaUniversAALDB.Reminder r, agendaUniversAALDB.Event e WHERE e.idReminder=r.idReminder AND r.StartTime>=? AND r.StartTime<?;
+getStartingEvents = SELECT e.idEvent FROM agendaUniversAALDB.Event e WHERE e.StartTime>=? AND e.StartTime<?;
+getEndingEvents = SELECT e.idEvent FROM agendaUniversAALDB.Event e WHERE e.EndTime>=? AND e.EndTime<?;
+getEventsFirstPartOfQuery = SELECT * from agendaUniversAALDB.getevents WHERE
+calendarExists = SELECT c.idCalendar FROM agendaUniversAALDB.CalendarType c, agendaUniversAALDb.Users u WHERE c.idUser=u.idUser AND c.description = ? AND u.username = ?;
+getReminderFromEvent = CALL agendaUniversAALDB.eventreminder(?);
+getAllECategories = SELECT e.Title FROM agendaUniversAALDb.Event e;
+getCalNameAndOwner = SELECT c.Description, u.UserName FROM agendaUniversAALDb.CalendarType c, agendaUniversAALDb.Users u WHERE u.idUser=c.idUser AND c.idCalendar=?;
+getCalendarFromEvent = SELECT c.Description FROM calendartype c, event e WHERE c.idCalendar=e.idCalendar AND e.idEvent=?;
+getUserData = CALL agendaUniversAALDB.UserData(?, ?);
+
+#deleting
+deleteEvent = CALL agendaUniversAALDB.removeEvent(?);
+deleteCalendar = DELETE FROM agendaUniversAALDB.CalendarType WHERE idCalendar=?;
+cancelReminder = CALL agendaUniversAALDb.cancelReminder(?);
+
+#updating
+updateReminder = CALL agendaUniversAALDB.updateReminder(?, ?, ?, ?, ?, ?);
+updateEvent = UPDATE agendaUniversAALDB.Event SET idReminder=?, Title=?, Description=?, StartTime=?, EndTime=?, Location=? WHERE idEvent=?;
+
+
+#not used statements
+addUser = INSERT INTO agendaUniversAALDB.Users (`idUserType`, `UName`, `USurname`, `Address`, `idCity`, `UserName`, `Password``) VALUES (?, ?, ?, ?, ?);
+addUserType = INSERT INTO agendaUniversAALDB.UserType (`Description`) VALUES (?);
 addRelationship = INSERT INTO agendaUniversAALDB.UsersRelationship (`idUser`, `idUserRelative`) VALUES (?, ?);
 addCountry = INSERT INTO agendaUniversAALDB.Country (`CountyName`) VALUES (?);
 addCity = INSERT INTO agendaUniversAALDB.City (`PostalCode`, `CityName`, `idCountry`, `idState`) VALUES (?, ?, ?, ?);
 addState = INSERT INTO agendaUniversAALDB.State (`StateName`) VALUES (?);
-addReminderType = addRelationship = INSERT INTO agendaUniversAALDB.ReminderType (`RTypeName`) VALUES (?);
-addReminder = INSERT INTO agendaUniversAALDB.Reminder (`idReminderType`, `StartTime`, `RepeatInterval`, `RepeatTime`, `Message`) VALUES (?,?,?,?,?);
-addReminderDeliverType = INSERT INTO agendauniversAALDB.ReminderDeliveryType (`idReminderType`, `idReminder`) VALUES (?, ?);
-addEvent = INSERT INTO agendaUniversAALDB.Event (`idCalendar`, `idReminder`, `Title`, `Description`, `StartTime`, `EndTime`, `Location`, `Active`) VALUES (?,?,?,?,?,?,?,?);
+addReminderType = INSERT INTO agendaUniversAALDB.ReminderType (`RTypeName`) VALUES (?);
 
-getUserID = SELECT u.idUser FROM agendaUniversAALDB.Users u WHERE u.username=?;
-addCalendar = INSERT INTO agendaUniversAALDB.CalendarType (`Description`, `idUser`) VALUES (?,?);
-getCalendarsByUser = SELECT * FROM agendaUniversAALDB.CalendarType c, agendaUniversAALDB.Users u WHERE c.idUser=u.idUser AND u.Username=?;
-getAllCalendarsWithUser = SELECT c.idCalendar, c.Description, c.idUser FROM agendaUniversAALDB.CalendarType c;
-getAllCalendarURI = select c.idCalendar FROM agendaUniversAALDB.CalendarType c;
-getCalOwnerName=SELECT c.Description, u.UserName FROM agendaUniversAALDb.CalendarType c, agendaUniversAALDb.Users u WHERE u.idUser=c.idUser AND c.Description=?;
 
-getCurrentReminders = SELECT e.idEvent FROM agendaUniversAALDB.Reminder r, agendaUniversAALDB.Event e WHERE e.idReminder=r.idReminder AND r.StartTime>=? AND r.StartTime<?;
-getStartingEvents = SELECT e.idEvent FROM agendaUniversAALDB.Event e WHERE e.StartTime>=? AND e.StartTime<?;
-getEndingEvents = SELECT e.idEvent FROM agendaUniversAALDB.Event e WHERE e.EndTime>=? AND e.EndTime<?;
-
-deleteEvent = CALL agendaUniversAALDB.removeEvent(?);
-
-getEvent = SELECT * from agendaUniversAALDB.getevents WHERE
-
-getReminderFromEvent = CALL agendaUniversAALDB.eventreminder(?);
-
-deleteCalendar = DELETE FROM agendaUniversAALDB.CalendarType WHERE idCalendar=?;
-getAllECategories = SELECT e.Title FROM agendaUniversAALDb.Event e;
-getCalNameAndOwner = SELECT c.Description, u.UserName FROM agendaUniversAALDb.CalendarType c, agendaUniversAALDb.Users u WHERE u.idUser=c.idUser AND c.idCalendar=?;
-
-cancelReminder = CALL agendaUniversAALDb.cancelReminder(?);
-
-getCalendarFromEvent = SELECT c.Description FROM calendartype c, event e WHERE c.idCalendar=e.idCalendar AND e.idEvent=?;
-
-updateReminder = CALL agendaUniversAALDB.updateReminder(?, ?, ?, ?, ?, ?);
-
-updateEvent = UPDATE agendaUniversAALDB.Event SET idReminder=?, Title=?, Description=?, StartTime=?, EndTime=?, Location=? WHERE idEvent=?;
-
-getUserData = CALL agendaUniversAALDB.UserData(?, ?);
