--- a/.gitattributes
+++ b/.gitattributes
@@ -187,27 +187,22 @@ agenda/agenda.runner/runner/configurations/agenda/credentials.properties -text
 agenda/agenda.runner/runner/configurations/ctxt.che/CHe.properties -text
 agenda/agenda.runner/runner/configurations/mw.bus.model/sodapop.key -text
 agenda/agenda.runner/runner/configurations/services/org.ops4j.pax.logging.properties -text
-agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_en.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_es.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_bob_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_gui_hr.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_jack_es.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_jack_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_nutritionist_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_remoteUser_hr.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_saied.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_saied_en.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_saied_es.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_saied_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_de.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_en.properties -text
+agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_es.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_hr.properties -text
-agenda/agenda.runner/runner/configurations/ui.dm/main_menu.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm/main_menu_en.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm/main_menu_es.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_gui_hr.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm/main_menu_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_jack_es.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_jack_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_nutritionist_hr.txt -text
@@ -219,6 +214,7 @@ agenda/agenda.runner/runner/configurations/ui.dm/main_menu_saied_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/messages.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm/messages_de.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm/messages_en.properties -text
+agenda/agenda.runner/runner/configurations/ui.dm/messages_es.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm/messages_hr.properties -text
 agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/renderer.properties -text
 agenda/agenda.runner/runner/configurations/ui.handler.gui/formsPrototypeProperties.properties -text
