--- a/long_term_behav/ont.drools/pom.xml
+++ b/long_term_behav/ont.drools/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>ont.pom</artifactId>
 		<groupId>org.universAAL.ontology</groupId>
@@ -6,19 +7,12 @@
 		<relativePath>../pom/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-  
-
-  
-  <artifactId>ont.drools</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
-  <description>Drools ontology</description>
-  <packaging>bundle</packaging>
-  
-  
-  
-  
-  
-    <dependencies>
+	<groupId>org.universAAL.ontology</groupId>
+	<artifactId>ont.drools</artifactId>
+	<version>0.1.1-SNAPSHOT</version>
+	<description>Drools ontology</description>
+	<packaging>bundle</packaging>
+	<dependencies>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
@@ -27,15 +21,15 @@
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.phWorld</artifactId>
-			<version>0.2.2-SNAPSHOT</version>
+			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
-    <build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
