--- a/food_shopping/pom/pom.xml
+++ b/food_shopping/pom/pom.xml
@@ -4,10 +4,9 @@
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>new_services.pom</artifactId>
     <version>0.1.0-SNAPSHOT</version>
-    <relativePath>../../new_services.pom</relativePath>
+    <relativePath>../../pom</relativePath>
   </parent>
   <artifactId>food_shopping.pom</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Food Shopping AAL Service</name>
   <url>http://forge.universaal.org/wiki/new_services:Food_Shopping_universAAL_service</url>
@@ -28,7 +27,9 @@
   </scm>
   <modules>
   	<module>../ont.foodDevices</module>
+  	<module>../food_shopping.service.RFidProvider</module>
   	<module>../food_shopping.service.client</module>
   	<module>../food_shopping.service.server</module>
   </modules>
+  <version>1.0.0-SNAPSHOT</version>
 </project>
