--- a/food_shopping/ont.foodDevices/.settings/org.eclipse.jdt.core.prefs
+++ b/food_shopping/ont.foodDevices/.settings/org.eclipse.jdt.core.prefs
@@ -1,6 +1,3 @@
-#Tue Feb 14 15:00:18 EET 2012
+#Fri Jul 06 11:40:28 CEST 2012
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
-org.eclipse.jdt.core.compiler.compliance=1.5
 org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
-org.eclipse.jdt.core.compiler.source=1.5
