--- a/food_shopping/pom/pom.xml
+++ b/food_shopping/pom/pom.xml
@@ -3,19 +3,22 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>new_services.pom</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>B.1</version>
     <relativePath>../../pom</relativePath>
   </parent>
+  
   <artifactId>food_shopping.pom</artifactId>
   <packaging>pom</packaging>
   <name>Food Shopping AAL Service</name>
   <url>http://forge.universaal.org/wiki/new_services:Food_Shopping_universAAL_service</url>
+  
   <licenses>
 	<license>
 	<name>Apache 2.0</name>
 	<url>http://www.apache.org/licenses/</url>
 	</license>
   </licenses>
+  
   <issueManagement>
   	<system>GForge - Tracker</system>
   	<!--<url>http://forge.universaal.org/gf/project/new_services/tracker/?action=TrackerItemBrowse&amp;tracker_id=</url>-->
@@ -32,4 +35,6 @@
   	<module>../food_shopping.service.server</module>
   </modules>
   <version>1.0.0-SNAPSHOT</version>
+  
+
 </project>
